--- a/cv-project/src/styles/styles.css
+++ b/cv-project/src/styles/styles.css
@@ -31,11 +31,19 @@ body {
   color: var(--theme3);
 }
 
-header {
+.header {
   display: flex;
   justify-content: space-between;
+  flex-direction: row;
   background-color: var(--theme1);
   color: var(--theme2);
+  padding-top: 8%;
+  padding-bottom: 4%;
+}
+
+.header h1 {
+  font-size: 35px;
+  margin-bottom: 7px;
 }
 
 .header--details {
