--- a/cv-project/src/styles/styles.css
+++ b/cv-project/src/styles/styles.css
@@ -14,12 +14,13 @@ body {
   width: 21cm;
   height: 29.7cm;
   background-color: var(--theme2);
+  box-shadow: 0 0 32px 8px rgb(161, 157, 157);
 }
 
 .section {
   padding: 2% 12%;
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   gap: 12px;
 }
 
@@ -37,8 +38,9 @@ body {
   flex-direction: row;
   background-color: var(--theme1);
   color: var(--theme2);
-  padding-top: 8%;
+  padding-top: 7%;
   padding-bottom: 4%;
+  margin-bottom: 2%;
 }
 
 .header h1 {
@@ -50,10 +52,6 @@ body {
   display: flex;
   flex-direction: column;
   gap: 5px;
-}
-
-.header--profile-pic.container {
-  /* border-radius: 50%; */
 }
 
 .header--profile-pic {
