--- a/cv-project/src/styles/styles.css
+++ b/cv-project/src/styles/styles.css
@@ -94,3 +94,15 @@ body {
 .hidden {
   display: none;
 }
+
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(255, 107, 181, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
