refactored data file; added edit buttons

--- a/cv-project/src/styles/styles.css
+++ b/cv-project/src/styles/styles.css
@@ -68,13 +68,13 @@ body {
 
 .entry {
   display: flex;
+  /* flex-direction: column; */
   gap: 12px;
   align-items: baseline;
   padding-bottom: 5px;
 }
 
-.entry--date,
-.entry--descriptor {
+.entry--sidebar {
   /* border: 1px red solid; */
   flex: 0 0 20%;
   font-size: xx-small;
@@ -93,6 +93,11 @@ body {
   font-size: small;
 }
 
+.editButton {
+  border-style: none;
+  background-color: transparent;
+}
+
 .hidden {
   display: none;
 }
@@ -107,4 +112,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.popup-container {
+  width: 80%;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
 }
