--- a/cv-project/src/styles/styles.css
+++ b/cv-project/src/styles/styles.css
@@ -33,6 +33,7 @@ body {
 .section--header button {
   height: 1.8em;
   width: 1.8em;
+  cursor: pointer;
 }
 
 .section--content {
@@ -70,7 +71,7 @@ body {
   display: flex;
   /* flex-direction: column; */
   gap: 12px;
-  align-items: baseline;
+  /* align-items: baseline; */
   padding-bottom: 5px;
 }
 
@@ -96,6 +97,7 @@ body {
 .editButton {
   border-style: none;
   background-color: transparent;
+  cursor: pointer;
 }
 
 .hidden {
