--- a/cv-project/src/styles/styles.css
+++ b/cv-project/src/styles/styles.css
@@ -110,17 +110,26 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(255, 107, 181, 0.6);
+  background-color: rgba(32, 32, 32, 0.2);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .popup-container {
-  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  box-shadow: 0 0 14px 4px var(--theme3);
 }
 
 form {
   display: flex;
   flex-direction: column;
+  padding: 22px;
+  gap: 7px;
+  min-width: 330px;
+  border-radius: 4px;
+  background-color: var(--theme2);
+  color: var(--theme1);
 }
