css page style hide overflow

--- a/cv-project/src/styles/styles.css
+++ b/cv-project/src/styles/styles.css
@@ -15,6 +15,7 @@ body {
   height: 29.7cm;
   background-color: var(--theme2);
   box-shadow: 0 0 32px 8px rgb(161, 157, 157);
+  overflow: hidden;
 }
 
 .section {
